# ImageSimilarity

./: CMakeLists (copy).txt  CMakeLists.txt  package (copy).xml  package.xml
TrainingData/: baseline_train.csv  baseline_truth.csv  similarity_for_ros_123.csv  similarity_for_ros_label_newpipeline.csv  similarity_for_ros_newpipeline_train.csv  similarity_for_ros_train (copy).csv  similarity_for_ros_train_old.csv  similarity_for_ros_truth (copy).csv  similarity_for_ros_truth_123.csv  similarity_for_ros_truth_newpipeline.csv  similarity_for_ros_truth_old.csv  similarity_merged_training_kopie_12.02_train.csv  similarity_merged_training_kopie_12.02_truth.csv
TrainingData/AlteSachen/: similarity_for_ros.csv  similarity_for_ros_label.csv  similarity_for_ros_train.csv  similarity_for_ros_train_NoColor.csv  similarity_for_ros_train_NoICP.csv  similarity_for_ros_train_NoPCL.csv  similarity_for_ros_train_NoSurf.csv  similarity_for_ros_truth.csv  similarity_for_ros_truth_NoPCL.csv  similarity_merged.csv  similarity_merged_training.csv
cmake/: image_similarity_config.cmake
descriptors/analysis_engines/: mongo_w_ue4bs_imsim.yaml  ue4bs_imsim (copy).yaml  ue4bs_imsim.yaml
descriptors/annotators/: BaselineClassifier.yaml  ImageSimilarity.yaml  ImageSimilarityPointCloud.yaml  SimClusterColorFromBeliefState.yaml  SimilaritySummarizer.yaml  imsim.yaml
descriptors/typesystem/: all_types.xml  similarity_types.xml
include/image_similarity/types/: all_types.h  beliefstate_types.h  similarity_types.h  type_definitions.h
src/: ClusterColorFromBeliefState.cpp  ImageSimilarity.cpp  ImageSimilarityPointCloud.cpp  SimilaritySummarizer.cpp  baselineClassifier.cpp  imsim.cpp
